# gb_patterns

./: .gitignore  Makefile  pyproject.toml
deploy/: make_arch.sh
src/: create_db.py  fronts.py  run.py  simple_wsgi.py  urls.py  views.py
src/engine/: __init__.py  courses.py  exceptions.py  main.py  unit_of_work.py  users.py
src/makutu_framework/: __init__.py  decorators.py  framework.py  templater.py  utils.py  views.py
src/templates/: add_student.html  another_page.html  base.html  category_list.html  contact.html  course_list.html  create_category.html  create_course.html  create_student.html  examples.html  index.html  menu.html  page.html  student_list.html
