[tool.pdm]

[tool.flake8]
max-line-length = 120
per-file-ignores = [
    '__init__.py:F401',
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yuliya Bryukhovskikh", email = "makutu@ereb.ru"},
]
dependencies = [
    "uwsgi>=2.0.22",
    "jinja2>=3.1.2",
]
requires-python = "~=3.7"
license = {text = "MIT"}
